# tiny-http

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: bench.rs  stack_buf_bench.rs
examples/: hello-world.rs  multi-threaded-server.rs  php-cgi-example.php  php-cgi.cmd  php-cgi.rs  php-cgi.sh  readme-example.rs  router.rs  serve-root.rs  socket-config-server.rs  ssl.rs  techempower_bench.rs  websockets.rs
git-hooks/: pre-commit  pre-push
src/: client.rs  common.rs  connection.rs  connection_stream.rs  lib.rs  listener_thread.rs  log.rs  request.rs  request_handler.rs  response.rs  server.rs  server_config.rs  socket_config.rs  socket_listener.rs  ssl.rs  stream_traits.rs  test.rs
src/common/: connection_header.rs  content_type.rs  header.rs  header_data.rs  http_version.rs  limits.rs  method.rs  mod.rs  range_header.rs  static_header.rs  status_code.rs
src/response/: date_header.rs  mod.rs  result.rs  standard.rs  transfer_encoding.rs  util.rs
src/ssl/: native_tls.rs  openssl.rs  rustls.rs
src/util/: custom_stream.rs  equal_reader.rs  fused_reader.rs  message.rs  messages_queue.rs  mod.rs  notify_on_drop.rs  refined_tcp_stream.rs  registration.rs  sequential.rs  task_pool.rs
tests/: http-0_9.rs  input-tests.rs  multi-thread.rs  network.rs  non-chunked-buffering.rs  promptness.rs  range-tests.rs  simple-test.rs  ssl-tests.rs  unblock-test.rs  unix-test.rs  util-equal-reader-rlimit-test.rs
tests/ssl_tests/: ca-cert.pem  ca-key.pem  cert.pem  csr.pem  key-pkcs8.pem  key.pem
tests/support/: mod.rs
