[package]
name = "tiny_http"
version = "0.12.0"
authors = ["pierre.krieger1708@gmail.com", "Corey Farwell <coreyf@rwell.org>"]
description = "Low level HTTP server library"
homepage = "https://tiny-http.github.io/tiny-http/"
repository = "https://github.com/tiny-http/tiny-http"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.61"

[package.metadata]
# minimum supported rust version 1.61 - dependencies rustls
msrv = "1.61"

[features]
default = ["log"]
ssl = ["ssl-openssl"]
ssl-openssl = ["openssl", "zeroize"]
ssl-rustls = ["rustls", "rustls-pemfile", "zeroize"]
ssl-native-tls = ["native-tls", "zeroize"]

[dependencies]
ascii = "1.1"
chunked_transfer = "1"
httpdate = "1.0.3"

log = { version = "0.4.20", optional = true }
openssl = { version = "0.10", optional = true }
rustls = { version = "0.22.2", optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }
zeroize = { version = "1", optional = true }
native-tls = { version = "0.2", optional = true }

[dev-dependencies]
fdlimit = "0.3.0"
rustc-serialize = "0.3"
sha1_smol = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
rlimit = "0.10.1"

[package.metadata.docs.rs]
# Enable just one SSL implementation
features = ["ssl-openssl"]
