[package]
name = "tiny_http"
version = "0.12.0"
authors = [
    "pierre.krieger1708@gmail.com",
    "Corey Farwell <coreyf@rwell.org>",
    "arlecchino <github@tower-net.de>",
]
description = "Low level HTTP server library"
homepage = "https://tiny-http.github.io/tiny-http/"
repository = "https://github.com/tiny-http/tiny-http"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.61"

# msrv:
# content-type 1.70
# native-tls 1.63
# openssl 1.63
# rustls 1.63
# socket2 1.63 

[package.metadata]
# minimum supported rust version 1.61 - https://doc.rust-lang.org/std/thread/struct.JoinHandle.html#method.is_finished
msrv = "1.61"

[features]
default = ["http-0-9", "log", "range-support"]
content-type = []
http-0-9 = []
range-support = []
socket2 = ["dep:socket2"]
ssl = ["ssl-openssl"]
ssl-openssl = ["openssl", "zeroize"]
ssl-rustls = ["rustls", "rustls-pemfile", "zeroize"]
ssl-native-tls = ["native-tls", "zeroize"]

[dependencies]
ahash = "0.8.11"
ascii = "1.1"
chunked_transfer = "1"
httpdate = "1.0.3"
lazy_static = "1.5.0"
log = { version = "0.4.20", optional = true }
openssl = { version = "0.10", optional = true }
rustls = { version = "0.23.13", optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }
socket2 = { version = "0.5.5", optional = true }
zeroize = { version = "1", optional = true }
native-tls = { version = "0.2", optional = true }

[dev-dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
#env_logger = { version = "0.11", default-features = false }
fdlimit = "0.3.0"
#log = { version = "0.4.20" }
sha1_smol = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
rlimit = "0.10.1"

[package.metadata.docs.rs]
# Enable just one SSL implementation
features = ["ssl-openssl"]

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macros = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
